--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <li>
                 <a href="./aquecimento-1/index.html">Aquecimento 1</a>
             </li>
+            <li>
+                <a href="./aquecimento-2/index.html">Aquecimento 2</a>
+            </li>
         </ul>
     </section>
 </body>
