--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li>
                 <a href="./aquecimento-2/index.html">Aquecimento 2</a>
             </li>
+            <li>
+                <a href="./aquecimento-3/index.html">Aquecimento 3</a>
+            </li>
         </ul>
     </section>
 </body>
